MyOOMJob - added Objects.requireNonNull